packages/nemo-parser/tests/type_errors/arg_count_mismatch.nemo
fn main() : i32 = {
  i32_shl(1, 2, 3)
}
